2016-10-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* tools/greenbone-nvt-sync.in: Add command line arguments --rsync,
	--wget and --curl to select download method.
	(is_feed_current, do_sync_community_feed, sync_nvts, do_help): Add
	cases for new command line arguments.

2016-10-19  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* tools/greenbone-nvt-sync.in (is_feed_current): Skip check if rsync is
	not available.
	(do_curl_community_feed): Output "curl failed" error if the archive
	file does not exist after running curl.

2016-10-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (loading_handler_stop): Call terminate_process().
	Handles a race condition where the scanner tries to terminate the
	loading handler process before the later has set the signal handler.

2016-10-13  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* tools/greenbone-nvt-sync.in (do_wget_community_feed): Log error and
	exit on failure.
	(do_curl_community_feed): Add missing definition of TMP_NVT.  Log error
	and exit on failure.

2016-10-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (plugin_next_unrun_dependency): Add parameter to
	check for infinite recursive calls caused by dependency cycles.
	(plugins_scheduler_next): Adjust plugin_next_unrun_dependency() function
	call.

2016-10-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* CMakeLists.txt: Add -D_FILE_OFFSET_BITS=64 -DLARGEFILE_SOURCE=1.
	Needed due to the include in r26353. Patch by Michael Wiegand.

2016-10-07  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (main): Add --gnupg-home option. Call set_gpghome()
	accordingly.

2016-10-05  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* tools/greenbone-nvt-sync.in (setup_temp_access_key)
	(cleanup_temp_access_key): New functions.
	(is_feed_current, sync_nvts): Use a temporary copy of the access key
	with restrictive file access permissions if necessary.
