@@ -7,9 +7,9 @@
 # Authors:
 # Lukas Grunwald <lukas.grunwald@greenbone.net>
 # Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
-# Michael Wiegand <michael.wiegand@intevation.de>
+# Michael Wiegand <michael.wiegand@greenbone.net>
 #
-# Copyright (C) 2009-2014 Greenbone Networks GmbH
+# Copyright (C) 2009-2016 Greenbone Networks GmbH
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -29,7 +29,7 @@
 # with some characters in order to make it newer than
 # any follow-up version to prevent that your version
 # will be overwritten.
-VERSION=20160927
+VERSION=20161020
 
 # SETTINGS
 # ========
@@ -150,7 +150,7 @@ then
   fi
 
   if [ -z "$FEED_HOME" ] ; then
-    FEED_HOME="http://www.greenbone.net/technology/gsf.html"
+    FEED_HOME="http://www.greenbone.net/security-feed/"
   fi
 else
   RESTRICTED=0
@@ -225,7 +225,7 @@ init_sync ()
   fi
 
   if [ -z "$FEED_HOME" ] ; then
-    FEED_HOME="http://www.greenbone.net/technology/gsf.html"
+    FEED_HOME="http://www.greenbone.net/security-feed/"
   fi
 
   FEED_CURRENT=0
